--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -20,6 +20,7 @@
 .navbar {
   padding: 4.5%;
 
+
 }
 
 ul {
@@ -35,6 +36,8 @@ ul {
   margin-left: 6.7%;
   position: relative;
   cursor: pointer;
+
+  scroll-behavior: smooth;
 }
 
 
