--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,25 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.App{scroll-behavior: smooth;}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.op {
+  margin: 0 0 2% 84%;
+  font-size: 30px;
+  cursor: pointer;
+  width: 8%;
+  text-align: center;
+  padding: 10px;
+  transition: 0.5s;
+}
+
+.op:hover {
+  border: solid 2px black;
+  border-radius: 5px;
+  color: white;
+  background-color: black;
 }
